--- a/package.json
+++ b/package.json
@@ -2,21 +2,21 @@
   "name": "playwright-e2e-tests",
   "version": "1.0.0",
   "scripts": {
-    "test": "playwright test"
+    "test": "cucumber-js && node generate-report.js",
+    "smoketest": "cucumber-js --tags @smoke && node generate-report.js"
   },
   "dependencies": {
-    "msw": "^2.3.1",
-    "playwright-msw": "^3.0.1"
-  },
-  "exports": {
-    "./browser": {
-      "node": null
-    }
+    "@cucumber/cucumber": "^11.1.1",
+    "image-size": "^1.1.1",
+    "playwright": "^1.49.1",
+    "ts-node": "^10.9.2"
   },
   "devDependencies": {
-    "@playwright/test": "^1.45.1",
+    "@cucumber/pretty-formatter": "^1.0.1",
+    "@playwright/test": "^1.49.1",
     "dotenv": "^16.4.5",
     "eslint": "^8.38.0",
-    "typescript": "^5.5.3"
+    "multiple-cucumber-html-reporter": "^3.8.0",
+    "typescript": "^5.7.2"
   }
 }
